--- a/empdashboard.html
+++ b/empdashboard.html
@@ -62,7 +62,7 @@
 
 
 <!--MAIN FOCUS DASHBOARD-->
-
+<section>
     <div class="container">
         <div class="row">
 
@@ -70,9 +70,9 @@
                 <div class="card" >
                     <div class="card-body shadow">
                         <h2 class="card-title">To Do:</h2>
-                        <h3 class="text-danger">Prioreties:</h3>
-                        <h3 class="text-warning">General:</h3>
-                        <h3 class="text-info">Not Urgent:</h3>
+                        <h3 class="red">Prioreties:</h3>
+                        <h3 class="blue">General:</h3>
+                        <h3 class="lightgreen">Not Urgent:</h3>
                     </div>
                 </div>
              </div>
@@ -145,7 +145,9 @@
 
 
         </div>
+</section>
 
+<section>
 
 <div class="container">
   <header>
@@ -505,10 +507,11 @@
     </div>
   </div>
 </div>
+</section>
 	  </main>
 
 
-<footer></footer>
+<footer class="fixed-bottom"> <p>This site was created for the use of Green Valley Auctions Members and James Madison University COB and SMAD students and professors only.</p> </footer>
 
         <!-- /.container -->
 
