buttons-fixed colors

--- a/empdashboard.html
+++ b/empdashboard.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="description" content="Description of this web site">
-	  	<meta name="author" content="Your Name Here">
+	  	<meta name="author" content="Christy Marchand">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Employee Dashboard- Green Valley Auctions </title>
 
