--- a/initialcontact.html
+++ b/initialcontact.html
@@ -3,9 +3,9 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="description" content="Description of this web site">
-	  	<meta name="author" content="Your Name Here">
+	  	<meta name="author" content="Christy Marchand">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Insert Descriptive Title Here</title>
+		<title>Initial Contact Forms- GReen Valley Auctions</title>
 
 		<!-- Bootstrap v5.0.0-beta1 -->
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
