--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="description" content="Description of this web site">
-	  	<meta name="author" content="Your Name Here">
+	  	<meta name="author" content="Christy Marchand">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Insert Descriptive Title Here</title>
+		<title>Log In- Green Valley Auctions</title>
 
 		<!-- Bootstrap v5.0.0-beta1 -->
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
@@ -57,10 +57,10 @@
 -->
 <div class="container" style="text-align: center;">
 <div class="btn-group btn-group-toggle  btn-custom" data-toggle="buttons">
-  <label class="btn btn-secondary active">
+  <label class="btn text-white">
     <input type="radio" name="options" id="option1" autocomplete="off" checked> Customer
   </label>
-  <label class="btn btn-secondary">
+  <label class="btn text-white">
     <input type="radio" name="options" id="option2" autocomplete="off"> Employee
   </label>
 
